# ContentCreationPipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION.md  README.md  RELEASING.md  REWRITE_PLAN.md  ROADMAP.md  api.env.example  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: data-flow-briefing-assembly.md  data-flow-content-briefing.md  pythonic-review.md  roadmap.md
output/2026-03-03_keyword-recherche/: brief-keyword-optimierung.md  competitors-keyword-recherche.json  keywords-keyword-recherche.json  pipeline-beschreibung.md  strategy-keyword-recherche.json
output/2026-03-03_reisemagazin-inspiration/: brief-schoenste-staedte-europa.md  competitors-reisemagazin-inspiration.json  draft-schoenste-staedte-europa.md  keywords-reisemagazin-inspiration.json  strategy-reisemagazin-inspiration.json
output/2026-03-03_thailand-urlaub/: article-thailand-urlaub.md  brief-thailand-urlaub.md  competitors-thailand-urlaub.json  draft-thailand-urlaub.md  keywords-thailand-urlaub.json  strategy-thailand-urlaub.json  thailand-urlaub-landingpage.html
packaging/: README_END_USER.md  api.env.example  run.bat  run.command
scripts/: build-idf-table.mjs  clean-output.mjs  freeze-briefing-fields.mjs  generate-golden.sh  run-extract-keywords.mjs
seo_pipeline/: __init__.py  orchestrator.py
seo_pipeline/analysis/: analyze_content_topics.py  analyze_page_structure.py  assemble_briefing_data.py  assemble_briefing_md.py  compute_entity_prominence.py  extract_claims.py  fact_check.py  fill_qualitative.py  merge_qualitative.py  score_draft_wdfidf.py  summarize_briefing.py  tov_check.py
seo_pipeline/api/: __init__.py
seo_pipeline/cli/: __init__.py  main.py
seo_pipeline/data/: blocklist_default.json  idf_de.json  location_codes.json  stopwords.json
seo_pipeline/drafting/: __init__.py  write_draft.py
seo_pipeline/extractor/: __init__.py  extract_page.py
seo_pipeline/keywords/: __init__.py  extract_keywords.py  fetch_keywords.py  filter_keywords.py  merge_keywords.py  prepare_strategist_data.py  process_keywords.py
seo_pipeline/llm/: __init__.py  client.py  config.py
seo_pipeline/models/: __init__.py  analysis.py  common.py  keywords.py  llm_responses.py  page.py  serp.py
seo_pipeline/serp/: __init__.py  assemble_competitors.py  fetch_serp.py  process_serp.py
seo_pipeline/utils/: __init__.py  load_api_config.py  math.py  preflight.py  resolve_location.py  slugify.py  text.py  tokenizer.py
src/analysis/: analyze-content-topics.mjs  analyze-page-structure.mjs  (+6 more)
streamlit_app/: _stage_form.py  app.py  progress.py  runs.py  settings_io.py  state.py
templates/: DT_ToV_v2.md  DT_ToV_v3.md  DT_ToneOfVoice.md  template-reiseart-themenseite.md  template-reisemagazin.md  template-urlaubsseite.md
tests/: __init__.py  test_orchestrator.py  test_streamlit_reporter.py  test_streamlit_runs.py  test_streamlit_settings_io.py  test_streamlit_smoke.py  test_streamlit_stage_form.py  test_streamlit_stage_pages_signatures.py
(+228 files in other folders)
