[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-pipeline"
version = "0.1.0"
description = "Python rewrite of the Claude Content Creation Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "python-dotenv>=1.0",
    "trafilatura>=1.0",
]

[project.optional-dependencies]
cli = ["typer[all]>=0.9"]
api = ["fastapi>=0.100", "uvicorn[standard]"]
dev = ["pytest>=8.0", "pytest-asyncio", "ruff"]
llm = ["litellm>=1.40"]
anthropic = ["litellm>=1.40", "anthropic>=0.25"]
openai = ["litellm>=1.40", "openai>=1.30"]
google = ["litellm>=1.40", "google-generativeai>=0.5"]

[project.scripts]
seo-pipeline = "seo_pipeline.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src/", "test/", "templates/", "node_modules/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
