[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-pipeline"
version = "0.9.0"
description = "Python rewrite of the Claude Content Creation Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "python-dotenv>=1.0",
    "trafilatura>=1.0",
    "litellm>=1.40",
    "pypandoc-binary",
]

[project.optional-dependencies]
cli = ["typer[all]>=0.9"]
dev = ["pytest>=8.0", "pytest-asyncio", "ruff"]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.30"]
google = ["google-generativeai>=0.5"]
ui = ["streamlit>=1.36", "watchdog"]

[project.scripts]
seo-pipeline = "seo_pipeline.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src/", "test/", "templates/", "node_modules/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "typer>=0.9",
]
